...
            "value" : "Profil"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Profile"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Perfil"
...
